# realm.one-ng

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  readme.md
.github/workflows/: build.yml
data/: auth.db  game.db  global.toml
data/characters/: ryan.txt  ryan2.txt
data/rooms/: d1.tmx  d2.tmx  n1_1.tmx
data/worlds/: floor.world  globe.world  n1.world  spec.md
data/worlds/500_500/: 500_500.toml  500_500.world
data/worlds/500_500/rooms/: 0.tmx  house.tmx  n1.tmx  p1.tmx
data/worlds/500_501/: 500_501.toml
data/worlds/500_501/rooms/: 0.tmx
data/worlds/501_500/: 501_500.toml  501_500.world
data/worlds/501_500/rooms/: 0.tmx
data/worlds/501_501/: 501_501.toml  501_501.world
data/worlds/501_501/rooms/: 0.tmx
docs/: speech.md  world_spec.md
game/assets/: main.tiled-project  main.tiled-session
game/assets/art/: README.md  boats.tsx  cave.tsx  character.tsx  inner.tsx  materials1.tsx  materials2.tsx  materials3.tsx  materials4.tsx  npc_test.tsx  objects.tsx  old_man.tsx  overworld.tsx  properties.tsx  slime.tsx  speech.tsx  tiny16.tsx
game/assets/art/characters/: README.md  character.pxo
game/assets/art/items/: wooden_sword.pxo
game/assets/art/npcs/: old_man.tsx
game/assets/art/widgets/: backpack.pxo  equiptment_bar.pxo
game/assets/cubes/: tile-1.aseprite  tile1u.tsx
game/containers/: README.md  backpack.toml  equipment_bar.toml  hotbar.toml
game/items/: README.md  monster_loot.toml  wooden_shield.toml  wooden_sword.toml
game/map/: d1.tmx
game/monsters/: README.md  nude_boy.toml  rat.toml  slime.toml  snake.toml
game/npcs/: README.md  old_man.toml
scripts/: generate_globe_world.py
src/: character.cpp  character.h  client_net.cpp  client_net.h  entity.h  frame.h  fs_db.h  main.cpp  room.cpp  room.h  server_net.h  sprites.cpp  sprites.h  test.cpp  text_input.h
src/_legacy/client/: client_game_ui.cpp  client_game_ui.h  client_hud.cpp  client_hud.h  client_inventory_overlay.h  client_inventory_ui.h  client_scene_renderer.cpp  client_sheet_cache.cpp  client_support.cpp  client_support.h  combat_fx.h  local_keys.h  room_render.cpp  room_render.h  speech_bubble.h  ui_settings.cpp  ui_settings.h
src/_legacy/common/: auth_crypto.cpp  combat_types.h  entity.cpp  msg_game_state.h  room.h  sprites.cpp
src/_legacy/server/: combat.cpp  combat.h  equipment.cpp  equipment.h  global_settings.h  ground_item_runtime.h  item_defs.cpp  monster_defs.cpp  monster_defs.h  net_server.cpp  npc_defs.cpp  player_runtime.h  server.cpp  server_constants.h  server_msg_handlers.cpp  server_runtime.h  server_spawning.h  server_state.h  server_tick.cpp  server_tick.h  server_util.cpp  world.cpp  world.h
src/client/: auth_screen.cpp  auth_screen.h  auth_ui.cpp  auth_ui.h  client.cpp  client_game_ui.cpp  client_game_ui.h  client_hud.cpp  client_hud.h  client_inventory_overlay.cpp  client_inventory_overlay.h  client_inventory_ui.cpp  client_inventory_ui.h  client_layout.cpp  client_layout.h  client_scene_renderer.cpp  client_scene_renderer.h  client_sheet_cache.cpp  client_sheet_cache.h  client_support.cpp  client_support.h  client_ui_primitives.cpp  client_ui_primitives.h  client_windows.cpp  client_windows.h  combat_fx.cpp  container_def.cpp  container_def.h  game_client.cpp  game_client.h  local_keys.cpp  local_keys.h  net_client.cpp  net_client.h  room_render.cpp  room_render.h  speech_bubble.cpp  speech_bubble.h  text_input.cpp  ui_settings.cpp
src/commmon/: character.h  helpers.h  msg.h  net_proto.h  room.cpp  room.h  sprites.cpp  sprites.h
src/common/: auth_crypto.cpp  auth_crypto.h  combat_types.h  enet_compat.h  envelope.h  item_instance.h  mailbox.h  msg.h  msg_game_state.h  msg_structs.h  msg_types.h  net_msgs.h  room.cpp  room.h  sprites.cpp  sprites.h  string_util.cpp  string_util.h  tile_pos.h  voxel_world.cpp  voxel_world.h
src/render/: cube_renderer.cpp  cube_renderer.h
src/server/: auth_db.cpp  auth_db.h  combat.cpp  combat.h  equipment.cpp  equipment.h  fs_db.cpp  game_server.cpp  game_server.h  global_settings.cpp  ground_item_runtime.h  item_defs.cpp  item_defs.h  monster_combat.cpp  monster_combat.h  monster_defs.cpp  monster_defs.h  monster_runtime.h  net_server.cpp  net_server.h  npc_defs.cpp  npc_defs.h  npc_runtime.h  player_runtime.h  server.cpp  server_constants.h  server_main.cpp  server_msg_handlers.cpp  server_msg_handlers.h  server_net.cpp  server_occupancy.cpp  server_occupancy.h  server_runtime.h  server_spawning.cpp  server_spawning.h  server_state.h  server_tick.cpp  server_util.cpp  server_util.h  world.cpp  (+1 more)
src/tests/: client_server_ser_de.cpp  test_room.cpp  test_sprites.cpp
src/viewer/: cube_renderer.cpp  cube_renderer.h  viewer.cpp
src/worldgen/: worldgen.cpp
